<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/activity_main_menu_home"
            android:visible="true"
            tools:ignore="UnusedAttribute" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_configuration"
            android:title="@string/activity_main_menu_configuration"
            android:visible="true"
            tools:ignore="UnusedAttribute" />

    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:iconTint="@color/green"
                android:title="@string/activity_main_menu_about"
                tools:ignore="UnusedAttribute" />
        </menu>
    </item>

</menu>
