<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_find"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_add"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_delete"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_check"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_save"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_configuration"
        android:orderInCategory="100"
        android:title="@string/toolbar_menu_configuration"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction"/>

</menu>
