<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".activity.LoginActivity_">

    <LinearLayout
        android:id="@+id/login_logo_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_android_white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_user_input"
                android:inputType="textWebEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.xwray.passwordview.PasswordView
                android:id="@+id/login_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pass_input"
                android:imeOptions="actionDone"
                android:lines="1"
                android:maxLines="1"
                app:useStrikeThrough="true" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/login_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_remember_me" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_action_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/login_enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_buttom_enter"
            android:textColor="@color/blue_gray_100" />

        <TextView
            android:id="@+id/login_forgot_your_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_your_pass"
            android:textColor="@color/blue_gray_100" />

    </LinearLayout>


</LinearLayout>
