<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/alert_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Título"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone"
                tools:ignore="HardcodedText"/>

            <ImageView
                android:id="@+id/close"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_close" />

        </LinearLayout>


        <TextView
            android:id="@+id/alert_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Mensagem de alerta"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="HardcodedText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:weightSum="2">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/yes_buttom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/yes"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"/>

        <me.grantland.widget.AutofitTextView
            android:id="@+id/no_buttom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/no"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:visibility="visible"/>

    </LinearLayout>

</LinearLayout>
